[package]
name = "bot-admin"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rusqlite = "0.23.1"

chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
